scripts/tinymce/bf_tinymce_plugins.css
@font-face {
    font-family: 'icomoon';
    src:url(/fonticons/icomoon.eot);
    src:url(/fonticons/icomoon.eot) format('embedded-opentype'),
        url(/fonticons/icomoon.woff2) format('woff2'),
        url(/fonticons/icomoon.ttf) format('truetype'),
        url(/fonticons/icomoon.woff) format('woff'),
        url(/fonticons/icomoon.svg) format('svg');
    font-weight: 400;
    font-style: normal
}
[class*=" icon-"],[class^=icon-]{
    font-family: 'icomoon' !important;
    speak: none;
    font-style: normal;
    font-weight: 400;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale
}
.icon-chevron-down:before {
    content : "\e60f"
}
.dropdown-menu>li {
    display: block;
    padding: 6px 12px;
    clear: both;
    font-size: 13px;
    line-height: 20px;
    font-weight: 300;
    color: #5f5f5f;
    white-space: nowrap;
    font-weight: bold;
    cursor: pointer;
    transition: 0.3s;
}
.dropdown-menu>li:hover {
    text-decoration: none;
    background-color: #eef0f0;
    padding-left: 16px !important;
}

